@@ -1482,6 +1482,11 @@ Wed Jun 11 08:30:41 CEST 2003
 
 	- Make sure a variable is no longer referenced when it is removed.
 	- Fixed counting bug in parsing "->" operator.
+	
+Fri Jun 13 10:11:12 CEST 2003
+
+	- Enable FETCH without INTO.
+	- Compatibility functions for INFORMIX handling of DECLARE statement.
 	- Set ecpg version to 2.12.0.
 	- Set ecpg library to 3.4.2.
 	- Set pgtypes library to 1.0.0
